MDEV-4227: Galera server should stop crashing on setting binlog_format STATEMENT

Analysis: Currently you can set binlog_format to STATEMENT or MIXED 
even when they are not really supported by galera.

Fix: Produce an error message if binlog_format is set to STATEMENT
or MIXED and wsrep_on = ON. Added a test case for this.